# ChangeLog for dev-java/jzlib
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jzlib/ChangeLog,v 1.13 2004/12/19 18:44:22 zx Exp $

  19 Dec 2004; Chris Aniszczyk <zx@gentoo.org> jzlib-1.0.5.ebuild:
  Fix for #74798

  18 Dec 2004; Markus Rothe <corsair@gentoo.org> jzlib-1.0.5.ebuild:
  added ~ppc64 to KEYWORDS

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jzlib-1.0.5.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

  21 May 2004; Chris Aniszczyk <zx@gentoo.org> jzlib-1.0.5.ebuild:
  Marking stable on x86

*jzlib-1.0.5 (21 May 2004)

  21 May 2004; Chris Aniszczyk <zx@gentoo.org> files/jzlib_build.xml,
  +jzlib-1.0.5.ebuild:
  Version bump. Closes #51628
  Thanks to Pavel <hlobil@sympatico.ca> for the heads up.

  04 May 2004; <SeJo@gentoo.org> jzlib-1.0.4.ebuild:
  added ~ppc

*jzlib-1.0.4 (30 Mar 2004)

  30 Mar 2004; Chris Aniszczyk <zx@gentoo.org> jzlib-1.0.3.ebuild,
  jzlib-1.0.4.ebuild:
  Clean up. Version bump. Closes #45708
  Thanks to Pavel <hlobil@sympatico.ca> for the cleaned up ebuild.

  23 Mar 2004; David Holm <dholm@gentoo.org> jzlib-1.0.3.ebuild:
  Backed out of ~ppc.

  22 Mar 2004; David Holm <dholm@gentoo.org> jzlib-1.0.3.ebuild:
  Added to ~ppc.

*jzlib-1.0.3 (14 Feb 2004)

  14 Feb 2004; Adrian Almenar <strider@gentoo.org> jzlib-1.0.3.ebuild,
  metadata.xml, files/jzlib_build.xml:
  Initial import of jzlib, needed for jsch.
  jzlib_build.xml taken from jzlib SRC RPM from Jpackage.org.
