@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/rhino/rhino-1.6.1.ebuild,v 1.1 2004/12/22 19:24:02 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/rhino/rhino-1.6.1.ebuild,v 1.2 2005/01/26 21:28:21 corsair Exp $
 
 inherit java-pkg eutils
 
